started writing controllers. add routers, service, error handler

--- a/server/.env
+++ b/server/.env
@@ -6,3 +6,6 @@ DB_USER=postress
 DB_PASSWORD=postress
 DB_HOST=localhost
 DB_PORT=5432
+
+JWT_ACCESS_SECRET=secret-jwt-key
+JWT_REFRESH_SECRET=secret-refresh-jwt-key
