--- a/server/.env
+++ b/server/.env
@@ -9,3 +9,7 @@ DB_PORT=5432
 
 JWT_ACCESS_SECRET=secret-jwt-key
 JWT_REFRESH_SECRET=secret-refresh-jwt-key
+
+CLIENT_PROTOCOL=http
+CLIENT_HOST=localhost
+CLIENT_PORT=3000
