--- a/server/.env
+++ b/server/.env
@@ -2,8 +2,8 @@ APP_HOST=localhost
 APP_PORT=5000
 
 DB_NAME=web-leti
-DB_USER=postress
-DB_PASSWORD=postress
+DB_USER=postgres
+DB_PASSWORD=postgres
 DB_HOST=localhost
 DB_PORT=5432
 
