--- a/server/package.json
+++ b/server/package.json
@@ -14,8 +14,10 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "node-schedule": "^2.1.1",
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
+    "puppeteer": "^19.8.5",
     "sequelize": "^6.30.0",
     "typescript": "^5.0.3",
     "uuid": "^9.0.0"
@@ -26,6 +28,7 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.15.11",
+    "@types/node-schedule": "^2.1.0",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0",
     "eslint": "^8.37.0",
