--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.2",
     "react-toastify": "^9.1.2",
     "sass": "^1.61.0",
     "typescript": "^4.9.5",
