started realisation timetable modal. add docker build

--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "npx tsc",
+    "start": "node dist/index.js",
     "dev": "nodemon index.ts"
   },
   "author": "",
@@ -31,6 +33,7 @@
     "@types/node-schedule": "^2.1.0",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0",
+    "concurrently": "^8.0.1",
     "eslint": "^8.37.0",
     "nodemon": "^2.0.22"
   }
