--- a/.env
+++ b/.env
@@ -11,5 +11,5 @@ CLIENT_PORT=3000
 POSTGRES_DB=web-leti
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-DB_HOST=localhost
+DB_HOST=postgres
 DB_PORT=5432
